k8s_skinnycert.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: skinnycert

---
# -------------------------------
# REST API Deployment + Service
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skinnycert-api
  namespace: skinnycert
spec:
  replicas: 0
  selector:
    matchLabels:
      app: skinnycert-api
  template:
    metadata:
      labels:
        app: skinnycert-api
    spec:
      containers:
        - name: skinnycert
          image: namphibian/skinnycert:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: skinnycert-api
  namespace: skinnycert
spec:
  selector:
    app: skinnycert-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: https
      port: 8443
      targetPort: 8443
    - name: alt-http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skinnycert-ingress
  namespace: skinnycert
spec:
  rules:
    - host: skinnycert.dev.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skinnycert-api
                port:
                  number: 80
---
# -------------------------------
# Gateway (APISIX)
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skinnycert-gateway
  namespace: skinnycert
spec:
  replicas: 0
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: skinnycert-gateway
  template:
    metadata:
      labels:
        app: skinnycert-gateway
    spec:
      containers:
        - name: gateway
          image: apache/apisix:3.9.0-debian
          ports:
            - containerPort: 9443
          volumeMounts:
            - name: apisix-config
              mountPath: /usr/local/apisix/conf/apisix.yaml
              subPath: apisix.yaml
              readOnly: true
      volumes:
        - name: apisix-config
          configMap:
            name: apisix-config

---
apiVersion: v1
kind: Service
metadata:
  name: skinnycert-gateway
  namespace: skinnycert
spec:
  selector:
    app: skinnycert-gateway
  ports:
    - name: https
      port: 9443
      targetPort: 9443
  type: LoadBalancer

---
# -------------------------------
# Benchmark (Taurus)
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skinnycert-benchmark
  namespace: skinnycert
spec:
  replicas: 0
  selector:
    matchLabels:
      app: skinnycert-benchmark
  template:
    metadata:
      labels:
        app: skinnycert-benchmark
    spec:
      containers:
        - name: taurus
          image: blazemeter/taurus
          tty: true
          stdin: true
          command: [ "/bin/sh" ]
          volumeMounts:
            - name: taurus-configs
              mountPath: /bzt-configs
              readOnly: true
            - name: taurus-artifacts
              mountPath: /tmp/artifacts
      volumes:
        - name: taurus-configs
          hostPath:
            path: ./benchmarks/configs
        - name: taurus-artifacts
          hostPath:
            path: ./benchmarks/artifacts
